force-app/main/default/objects/Job_Posting__c/fields/Eligibility_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_CGPA__c</fullName>
    <label>Eligibility CGPA</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>