force-app/main/default/objects/Job_Posting__c/fields/Eligible_Branch__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Branch__c</fullName>
    <label>Eligible Branch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>CSE(AI)</fullName>
            </value>
            <value>
                <fullName>CSE(DS)</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MEC</fullName>
            </value>
            <value>
                <fullName>CIVIL</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>