force-app/main/default/objects/Job_Posting__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Posted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>