force-app/main/default/objects/Job_Posting__c/fields/Salary_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Salary_Stipend__c</fullName>
    <label>Salary / Stipend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>