force-app/main/default/objects/Job_Posting__c/recordTypes/Full_time.recordType-meta.xml
<RecordType>
    <fullName>Full_time</fullName>
    <active>true</active>
    <label>Full-time Job</label>
</RecordType>